--- a/Dots/app/src/main/AndroidManifest.xml
+++ b/Dots/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         </activity>
         <activity
             android:name=".GameActivity"
-            android:label="@string/title_activity_game" >
+            android:label="@string/title_activity_game"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
         </activity>
     </application>
 
