--- a/Dots/app/src/main/AndroidManifest.xml
+++ b/Dots/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
             android:name=".SetHighScoreActivity"
             android:label="@string/title_activity_set_high_score" >
         </activity>
+        <activity
+            android:name=".OptionsActivity"
+            android:label="@string/title_activity_options" >
+        </activity>
     </application>
 
 </manifest>
