--- a/Dots/app/src/main/AndroidManifest.xml
+++ b/Dots/app/src/main/AndroidManifest.xml
@@ -9,8 +9,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,13 +18,12 @@
         </activity>
         <activity
             android:name=".BoardSelector"
-            android:label="@string/title_activity_board_selector"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
+            android:label="@string/title_activity_board_selector" >
         </activity>
         <activity
             android:name=".GameActivity"
             android:label="@string/title_activity_game"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".HighScoresActivity"
