--- a/Dots/app/src/main/AndroidManifest.xml
+++ b/Dots/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +21,8 @@
         </activity>
         <activity
             android:name=".BoardSelector"
-            android:label="@string/title_activity_board_selector" >
+            android:label="@string/title_activity_board_selector"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".GameActivity"
@@ -29,15 +31,18 @@
         </activity>
         <activity
             android:name=".HighScoresActivity"
-            android:label="@string/title_activity_high_scores" >
+            android:label="@string/title_activity_high_scores"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".SetHighScoreActivity"
-            android:label="@string/title_activity_set_high_score" >
+            android:label="@string/title_activity_set_high_score"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".OptionsActivity"
-            android:label="@string/title_activity_options" >
+            android:label="@string/title_activity_options"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
